landing page ui

--- a/Web/src/app/header/header.component.html
+++ b/Web/src/app/header/header.component.html
@@ -27,7 +27,7 @@
         <div class="navbar-address2">
             <ul class="list-inline">
                 <li class="pl-3" id="memberLinkPanRegister">
-                    <i class="fas fa-map-marker-alt pb-1" style="font-size:24px;color: rgb(228, 120, 31)"></i>
+                    <a href="/"><img class="pin" src="../../assets/images/navbar_and_banner_section/pin.png"></a>
                 </li>
                 <li class="pt-3" id="memberLinkPanRegister">
                     <span>No 571, Highlevel Road,<br/>Delkanda, Nugegoda</span>
