--- a/Web/src/app/landing/landing.component.html
+++ b/Web/src/app/landing/landing.component.html
@@ -355,7 +355,8 @@ init();
                 <ul class="list-inline justify-content-center" style="text-align: center">
                   <li>
                       <img class="service-icon1" src="../../assets/images/services_grids/delivery-truck.png">
-                      <h1 class="value" style="color: #f8b202;font-weight: bold" id="count1" value="">500</h1>
+                      <h1 class="value" style="color: #f8b202;font-weight: bold">
+                        <span class="stat-count" data-count="400">0</span></h1>
                       <h3 style="color: white">Quality</h3>
                       <h3 style="color: white">Products</h3>
                   </li>
