landing page ui

--- a/Web/src/app/products/products.component.html
+++ b/Web/src/app/products/products.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="row" style="height: 60%;text-align: center;">
+<div class="row products-page">
 </div>
 <div class="row" style="background-color: white">
 <div class="col-1"></div>
