--- a/Web/src/app/header/header.component.html
+++ b/Web/src/app/header/header.component.html
@@ -26,6 +26,12 @@
     <div class="right_bar">
         <div class="navbar-address2">
             <ul class="list-inline">
+                <!-- <li id="memberLinkPanRegister">
+                    <form class="search" style="max-width:300px">
+                    <input type="text" placeholder="Search.." name="search2">
+                    <button type="submit"><i class="fa fa-search"></i></button>
+                    </form>
+                </li> -->
                 <li class="pl-3" id="memberLinkPanRegister">
                     <a href="/"><img class="pin" src="../../assets/images/navbar_and_banner_section/pin.png"></a>
                 </li>
