--- a/Web/src/app/landing/landing.component.html
+++ b/Web/src/app/landing/landing.component.html
@@ -140,28 +140,43 @@ init();
           </div>
       </div>
 </section> -->
-
 <section id="bgimage1">
-    <div class="row justify-content-center background1">
-      <p class="textstylewhite">A Total Solution Provider for all your Agricultural needs</p>
-      <!-- <ul class="justify-content-center">
-        <li class="col-md-2 col-sm-6 divcard m-5" >
-            <span><i class="fas fa-seedling fa-5x"></i></span>
-            <p class="textcenter">Description</p>
-        </li>
-        <li class="col-md-2 col-sm-6 divcard m-5">
-            <span><i class="fas fa-seedling fa-5x"></i></span>
-            <p class="textcenter">Description</p>
-        </li>
-        <li class="col-md-2 col-sm-6 divcard m-5">
-            <span><i class="fas fa-seedling fa-5x"></i></span>
-            <p class="textcenter">Description</p>
-        </li>
-        <li class="col-md-2 col-sm-6 divcard m-5">
-            <span><i class="fas fa-seedling fa-5x"></i></span>
-            <p class="textcenter">Description</p>
-        </li>
-    </ul> -->
+    <div class="justify-content-center background1">
+        <p class="textstylewhite">A Total Solution Provider for all your Agricultural needs</p>
+        <div class="row justify-content-center" style="padding-top: 10px">
+            <div class="col-2 divservices m-5">
+                <ul class="list-inline justify-content-center" style="text-align: center">
+                  <li>
+                      <img class="service-icon6 mt-3 mb-2" src="../../assets/images/total_service_provider_section/Planting.png">
+                      <h4 class="mb-5 mt-1" style="color:black">Consultancy</h4>
+                  </li>
+                </ul>
+            </div>
+            <div class="col-2 divservices m-5">
+                <ul class="list-inline justify-content-center" style="text-align: center">
+                  <li>
+                      <img class="service-icon6 mt-3 mb-2" src="../../assets/images/total_service_provider_section/irrigation.png">
+                      <h4 class="mb-5 mt-1" style="color:black">Irrigation</h4>
+                  </li>
+                </ul>
+            </div>
+            <div class="col-2 divservices m-5">
+                <ul class="list-inline justify-content-center" style="text-align: center">
+                  <li>
+                      <img class="service-icon6 mt-3 mb-2" src="../../assets/images/total_service_provider_section/Fertilizer.png">
+                      <h4 class="mb-5 mt-1" style="color:black">Fertilizer</h4>
+                  </li>
+                </ul>
+            </div>
+            <div class="col-2 divservices m-5">
+                <ul class="list-inline justify-content-center" style="text-align: center">
+                  <li>
+                      <img class="service-icon6 mt-3 mb-2" src="../../assets/images/total_service_provider_section/plant-pot.png">
+                      <h4 class="mb-5 mt-1" style="color:black">Growing Pots</h4>
+                  </li>
+                </ul>
+            </div>
+        </div>
     </div>
 </section>
 
@@ -354,9 +369,10 @@ init();
             <div class="col-2">
                 <ul class="list-inline justify-content-center" style="text-align: center">
                   <li>
-                      <img class="service-icon1" src="../../assets/images/services_grids/delivery-truck.png">
-                      <h1 class="value" style="color: #f8b202;font-weight: bold">
-                        <span class="stat-count" data-count="400">0</span></h1>
+                      <img class="service-icon4" src="../../assets/images/bottom_company_achievements/new-product.png">
+                      <h1 class="mt-3 mb-4" style="color: #f89602;font-weight: bold">
+                        <span class="stat-count" data-count="500">0</span> +
+                      </h1>
                       <h3 style="color: white">Quality</h3>
                       <h3 style="color: white">Products</h3>
                   </li>
@@ -365,8 +381,10 @@ init();
             <div class="col-2">
                 <ul class="list-inline justify-content-center" style="text-align: center">
                   <li>
-                      <img class="service-icon1" src="../../assets/images/services_grids/delivery-truck.png">
-                      <h1 class="mt-3 mb-4" style="color: #f8b202;font-weight: bold">500+</h1>
+                      <img class="service-icon4" src="../../assets/images/bottom_company_achievements/agriculture.png">
+                      <h1 class="mt-3 mb-4" style="color: #f89602;font-weight: bold">
+                        <span class="stat-count" data-count="80">0</span>
+                      </h1>
                       <h3 style="color: white">Agricultural</h3>
                       <h3 style="color: white">Products</h3>
                   </li>
@@ -375,8 +393,10 @@ init();
             <div class="col-2">
                 <ul class="list-inline justify-content-center" style="text-align: center">
                   <li>
-                      <img class="service-icon1" src="../../assets/images/services_grids/delivery-truck.png">
-                      <h1 class="mt-3 mb-4" style="color: #f8b202;font-weight: bold">500+</h1>
+                      <img class="service-icon3" src="../../assets/images/bottom_company_achievements/person.png">
+                      <h1 class="mt-3 mb-4" style="color: #f89602;font-weight: bold">
+                        <span class="stat-count" data-count="100">0</span>
+                      </h1>
                       <h3 style="color: white">Quality</h3>
                       <h3 style="color: white">Products</h3>
                   </li>
@@ -385,8 +405,10 @@ init();
             <div class="col-2">
                 <ul class="list-inline justify-content-center" style="text-align: center">
                   <li>
-                      <img class="service-icon1" src="../../assets/images/services_grids/delivery-truck.png">
-                      <h1 class="mt-3 mb-4" style="color: #f8b202;font-weight: bold">500+</h1>
+                      <img class="service-icon3" src="../../assets/images/bottom_company_achievements/brand_champion.png">
+                      <h1 class="mt-3 mb-4" style="color: #f89602;font-weight: bold">
+                        <span class="stat-count" data-count="800">0</span>
+                      </h1>
                       <h3 style="color: white">Quality</h3>
                       <h3 style="color: white">Products</h3>
                   </li>
