--- a/Web/src/styles.scss
+++ b/Web/src/styles.scss
@@ -84,6 +84,18 @@ html {
 	margin-right: 2%;
   }
 
+  .products-page{
+	height: 40%;
+	text-align: center;
+  }
+
+  @media screen and (min-width: 600px) {
+	.products-page {
+		height: 20%;
+		text-align: center;
+	}
+  }
+
   a {
 	color: #92badd;
 	display:inline-block;
@@ -750,16 +762,17 @@ html {
   
   .carousel-caption h5 {
 	font-size: 45px;
-	text-transform: uppercase;
 	letter-spacing: 2px;
 	margin-top: 25px;
+	font-weight: bold;
   }
   
   .carousel-caption p {
 	width: 75%;
-	margin: auto;
-	font-size: 18px;
+	font-size: 34px;
 	line-height: 1.9;
+	color: white;
+	text-align: left;
   }
 
   @media screen and (min-width: 601px) {
@@ -1153,6 +1166,19 @@ html {
     justify-content: center;
 }
 
+.divservices {
+	vertical-align: middle;
+	justify-content: center;
+	border-radius: 12px;
+	background: #ffffff;
+	color: white;
+	padding: 12px;  
+	padding-bottom: 15px;
+	padding-left: 0px;
+	padding-right: 0px;
+	display: grid;
+}
+
 .divservicecard {
 	vertical-align: middle;
 	justify-content: center;
@@ -1264,7 +1290,10 @@ pre {
 	text-align: center;
 	font-size: 24px;
 	font-weight: 10; 
-	padding: 15%;
+	padding-top: 10%;
+	padding-left: 15%;
+	padding-right: 15%;
+	padding-bottom: 5%;
 	color: rgba(238, 238, 238, 0.603);
 	font-family: Garamond, serif;
 }
@@ -1283,6 +1312,7 @@ pre {
 	font-size: 16px;
 	background-color: #13152e;
 	padding: 5px;
+	color: #f89602;
 }
 
 .fa-badge:after{
@@ -1528,3 +1558,25 @@ button {
 	width:45px;
 	height:40px;
 }
+.service-icon6{
+	vertical-align: .07em;
+	width:45px;
+	height:55px;
+}
+
+//search box
+form.search input[type=text] {
+	background-color: #f6f6f6;
+	border: none;
+	color: #0d0d0d;
+	padding: 4px 20px 5px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 0px;
+	width: 85%;
+	border: 0px solid #f6f6f6;
+	transition: all 0.5s ease-in-out;
+	border-radius: 0px;
+  }
