--- a/Web/src/app/landing/landing.component.html
+++ b/Web/src/app/landing/landing.component.html
@@ -142,7 +142,7 @@ init();
 </section> -->
 <section id="bgimage1">
     <div class="justify-content-center background1">
-        <p class="textstylewhite">A Total Solution Provider for all your Agricultural needs</p>
+        <p class="textstylewhite">A leading total solution provider for all your agricultural needs</p>
         <div class="row justify-content-center" style="padding-top: 10px">
             <div class="col-2 divservices m-5">
                 <ul class="list-inline justify-content-center" style="text-align: center">
@@ -220,7 +220,7 @@ init();
 
 <section id="services" class="section-services">
       <div class="row justify-content-center">
-          <div class="col-2 divservicecard m-3">
+          <div class="col-md-2 col-sm-12 divservicecard m-3">
               <ul class="list-inline" style="text-align: center">
                 <li>
                     <img class="service-icon1" src="../../assets/images/services_grids/delivery-truck.png">
@@ -231,10 +231,10 @@ init();
                 </li>
               </ul>
           </div>
-          <div class="col-2 divservicecard m-3">
+          <div class="col-md-2 col-sm-12 divservicecard m-3">
               <ul class="list-inline" style="text-align: center">
                 <li>
-                    <img class="service-icon2" src="../../assets/images/services_grids/best-price.png">
+                    <img class="service-icon1" src="../../assets/images/services_grids/best-price.png">
                 </li>
                 <li class="justify-content-center">
                     <h3>Reasonable</h3>
@@ -242,7 +242,7 @@ init();
                 </li>
               </ul>
           </div>
-          <div class="col-2 divservicecard m-3">
+          <div class="col-md-2 col-sm-12 divservicecard m-3">
               <ul class="list-inline" style="text-align: center">
                 <li>
                     <img class="service-icon3" src="../../assets/images/services_grids/hand.png">
@@ -253,7 +253,7 @@ init();
                 </li>
               </ul>
           </div>
-          <div class="col-2 divservicecard m-3">
+          <div class="col-md-2 col-sm-12 divservicecard m-3">
               <ul class="list-inline" style="text-align: center">
                 <li>
                     <img class="service-icon4" src="../../assets/images/services_grids/new-product.png">
@@ -264,10 +264,10 @@ init();
                 </li>
               </ul>
           </div>
-          <div class="col-2 divservicecard m-3">
+          <div class="col-md-2 col-sm-12 divservicecard m-3">
             <ul class="list-inline" style="text-align: center">
               <li>
-                  <img class="service-icon5" src="../../assets/images/services_grids/special-offers.png">
+                  <img class="service-icon4" src="../../assets/images/services_grids/special-offers.png">
               </li>
               <li class="justify-content-center">
                   <h3>Special</h3>
